Update 'g6o3xj4gw-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe:cccd666f37f598bfd0ba5efef729c64ddc63f0f2@sha256:00db6ce85b83227bd3024ddb20831ca269add2ec4d637470fa9192610af5f90a

--- a/components/g6o3xj4gw-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/g6o3xj4gw-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: g6o3xj4gw-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:cccd666f37f598bfd0ba5efef729c64ddc63f0f2@sha256:00db6ce85b83227bd3024ddb20831ca269add2ec4d637470fa9192610af5f90a
+          name: container-image
